src/components/Button.module.css
button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.75rem 1rem;
  font-size: 1rem;
  font-weight: 500;
  font-family: inherit;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: white;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.primary {
  background-color: #108c05;
}
.primary:hover {
  background-color: #0e7a04;
}

.secondary {
  background-color: #3d9136;
}
.secondary:hover {
  background-color: #378530;
}

.icon {
  display: flex;
  align-items: center;
  padding: 0.5rem;
  color: black;
  background-color: transparent;
}

.fab {
  background-color: #108c05;
  padding: 0.75rem;
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  z-index: 1;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
}

